[TexMap][QT] Draw the borders of media and webgl elements in TexMap. https://bugs.webkit.org/show_bug.cgi?id=73817

GraphicsContext3D only draws the content of the WebGL canvas, not the additional
CSS such as the borders. TextureMapper should render the content of a
media/webgl layer before drawing the actual canvas.
This makes LayoutTests/compositing/webgl/webgl-reflection.html work.

Patch by Huang Dongsung <luxtella@company100.net> on 2011-12-06
Reviewed by Noam Rosenthal.

* platform/graphics/texmap/GraphicsLayerTextureMapper.cpp:
(WebCore::GraphicsLayerTextureMapper::setContentsNeedsDisplay):
* platform/graphics/texmap/GraphicsLayerTextureMapper.h:
* platform/graphics/texmap/TextureMapperNode.cpp:
(WebCore::TextureMapperNode::renderContent):
(WebCore::TextureMapperNode::paintSelf):

Canonical link: https://commits.webkit.org/90561@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102113 268f45cc-cd09-0410-ab3c-d52691b4dbfc